--- a/todolist/templates/create_task.html
+++ b/todolist/templates/create_task.html
@@ -1,11 +1,74 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block meta %}
 
-<form action="{% url 'todolist:create_task' %}" method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Submit" />
-</form>
+<style>
+	body {
+		background-image: linear-gradient(to right, #af1616, #162ea6);
+	}
+
+</style>
+
+<title>Add Task</title>
+{% endblock meta %}
+
+{% block content %}
+<section class="vh-100">
+	<div class="container-fluid p-0">
+		<nav class="navbar navbar-expand-lg" style="background-image: linear-gradient(to left, #161b23, #161b23, #161b23);">
+			<div class="container-fluid">
+				<a class="nav-link text-light" href="#">Task Creation</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<div style="margin-right: auto"></div>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link disabled" style="color: #DFD3C3;">{{username}}</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active text-light" aria-current="page" style="color: #DFD3C3;" href="{% url 'todolist:show_todolist' %}">TodoList</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" style="color: #FF0000;" href="{% url 'todolist:logout' %}">Logout</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+	
+	<div class="container py-5 h-100">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="col-12 col-md-8 col-lg-6 col-xl-5">
+				<div class="card shadow-2-strong" style="border-radius: 1rem;">
+					<div class="card-body p-5 text-center">
+						
+						<div class = "create">
+							<h1 class="mb-5">Create New Task</h1>
+							
+							<form action="{% url 'todolist:create_task' %}" method="post">
+								{% csrf_token %}
+								{{ form.as_p }}
+								<input type="submit" value="Submit" />
+							</form>
+						</div>
+						
+						{% if messages %}
+						<ul>
+							{% for message in messages %}
+							<li style="color: red; padding-top: 10px;">{{ message }}</li>
+							{% endfor %}
+						</ul>
+						{% endif %}
+					
+					
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 {% endblock %}
