--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -1,34 +1,56 @@
 {% extends 'base.html' %}
 
 {% block meta %}
+<style>
+	body {
+		background-image: linear-gradient(to right, #af1616, #162ea6);
+	}
+
+</style>
 <title>Registrasi Akun</title>
 {% endblock meta %}
 
 {% block content %}
 
-<div class = "login">
-	
-	<h1>Formulir Registrasi</h1>
-	
-	<form method="POST" >
-		{% csrf_token %}
-		<table>
-			{{ form.as_table }}
-			<tr>
-				<td></td>
-				<td><input type="submit" name="submit" value="Daftar"/></td>
-			</tr>
-		</table>
-	</form>
-	
-	{% if messages %}
-	<ul>
-		{% for message in messages %}
-		<li>{{ message }}</li>
-		{% endfor %}
-	</ul>
-	{% endif %}
+<section class="vh-100">
+	<div class="container py-5 h-100">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="card text-center m-2 shadow-2-strong" style="border-radius: 1rem;">
+				<div class="card-body align-items-center p-5 text-center">
+					<div class="login">
+						
+						<h1>Sign Up</h1>
+						
+						
+						<form method="POST">
+							<div class="table-responsive">
+							{% csrf_token %}
+							<table style="margin: auto; text-align:end;" class="table text-start table-borderless">
+								{{ form.as_table }}
+								<tr>
+									<td></td>
+									<td><input type="submit" name="submit" value="Daftar"/></td>
+								</tr>
+							</table>
+							</div>
+						</form>
+						
+						{% if messages %}
+						<ul>
+							{% for message in messages %}
+							<li>{{ message }}</li>
+							{% endfor %}
+						</ul>
+						{% endif %}
+					
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
-</div>
 
 {% endblock content %}
+
+
