--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,42 +1,76 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+<style>
+	body {
+		background-image: linear-gradient(to right, #af1616, #162ea6);
+	}
+	.small-btn {
+		font-size: 15px; border-radius: 10px;
+	}
+</style>
+{% endblock meta %}
+
 {% block content %}
-<h1>Tugas 4 PBP/PBD</h1>
 
-<h3>Halo {{nama}}, selamat datang di Aplikasi To Do List</h3>
 
-<button><a href="{% url 'todolist:create_task' %}">Tambah Tugas</a></button>
 
-<table>
-	<tr>
-		<th>Tanggal</th>
-		<th>Tugas</th>
-		<th>Deskripsi</th>
-		<th>Status</th>
-		<th>Ubah Status</th>
-		<th>Hapus</th>
-	</tr>
-	
+
+<section class="vh-100">
+	<div class="container-fluid p-0">
+		<nav class="navbar navbar-expand-lg" style="background-image: linear-gradient(to left, #161b23, #161b23, #161b23);">
+			<div class="container-fluid">
+				<a class="nav-link text-light" href="#">Hi {{nama}}</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<div style="margin-right: auto"></div>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link disabled" style="color: #DFD3C3;">{{username}}</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" style="color: #FF0000;" href="{% url 'todolist:logout' %}">Logout</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+<div class="p-3 mt-2 mb-2 text-light">
+	<h1 class="fw-bold"> To-Do List </h1>
+</div>
+
+<div class="row row-cols-md-3 mx-auto" style="width: 95%" >
 	{% for tugas in list_task %}
-	<tr>
-		<th>{{tugas.date}}</th>
-		<th>{{tugas.title}}</th>
-		<th>{{tugas.description}}</th>
-		{% if tugas.is_finished %}
-			<th>Selesai</th>
-		    <th><button><a href = "{% url 'todolist:ubah_status' tugas.id %}">Tandai Belum Selesai</a></button></th>
-		{% else %}
-			<th>Belum Selesai</th>
-			<th><button><a href = "{% url 'todolist:ubah_status' tugas.id %}">Tandai Selesai</a></button></th>
-		{% endif %}
-		<th><button><a href = "{% url 'todolist:hapus' tugas.id %}">Hapus</a></button></th>
-
-	</tr>
+	<div class="col mb-4">
+		<div class="card shadow rounded h-100">
+			{% if tugas.is_finished %}
+			<h5 class="card-header" style="color:rgb(27, 105, 99); font-size: 17px"> ✅ Selesai</h5>
+			{% else %}
+			<h5 class="card-header" style="color:rgb(253, 38, 18); font-size: 17px"> 🚫 Belum Selesai</h5>
+			{% endif %}
+			<div class="card-body">
+				<h5 class="card-title">{{tugas.title}}</h5>
+				<p class="card-text">{{tugas.description}}</p>
+				<a class="btn btn-outline-info m-1 small-btn" role="button" href="{% url 'todolist:ubah_status' tugas.id %}">Change</a>
+				<a class="btn btn-outline-danger m-1 small-btn" role="button" href="{% url 'todolist:hapus' tugas.id %}">Delete</a>
+				<p class="text-secondary card-subtitle align-text-bottom mt-3" style="font-size: 13px; text-align: right;">{{tugas.date}}</p>
+			</div>
+		</div>
+	</div>
 	{% endfor %}
-</table>
+</div>
 
-<h5>Sesi terakhir login: {{ last_login }}</h5>
+<p style="text-align: center">
+	<a class="btn btn-dark m-3" role="button" style="font-size: 17px; border-radius: 20px; width:15rem" href="{% url 'todolist:create_task' %}">Add New Task</a>
+</p>
 
-<button><a href="{% url 'todolist:logout' %}">Logout</a></button>
+
+<footer class="blockquote-footer"><center>Sesi terakhir login: {{ last_login }}</center></footer>
+
+
 
 {% endblock content %}
